--- a/style.css
+++ b/style.css
@@ -105,6 +105,11 @@ main {
   position: relative;
 }
 
+.icon svg.dash-icons {
+  width: 57px;
+  height: 25px;
+}
+
 .icon-shadow {
   position: absolute;
   top: -5px;
