--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@
 body {
   font-family: 'DM Sans Regular';
   font-weight: normal;
-  font-style: normal;
+  font-style: medium;
   background-color: #1c1d22;
 }
 
@@ -39,6 +39,10 @@ h2 {
   font-size: 18px;
 }
 
+li {
+  list-style-type: none;
+}
+
 /* Grid Classes */
 .grid {
   display: grid;
@@ -52,6 +56,10 @@ h2 {
 .flex {
   display: flex;
   flex-wrap: wrap;
+}
+
+.justify-start {
+  justify-content: flex-start;
 }
 
 .justify-between {
@@ -96,12 +104,12 @@ main {
 
 .welcome {
   grid-template-columns: 1fr 1fr 1fr 1fr;
-  grid-gap: 18px;
+  grid-gap: 20px;
 }
 
 .cards {
   background-color: rgba(255, 255, 255, .09);
-  min-height: 100px;
+  min-height: 60px;
   border-radius: 6px;
   padding: 12px 20px;
   border: 1px solid rgba(255, 255, 255, 0.1);
@@ -113,10 +121,6 @@ main {
 
 .numeric {
   font-size: 1.75rem;
-}
-
-.cards li {
-  list-style-type: none;
 }
 
 .icon {
@@ -148,8 +152,9 @@ main {
   margin: 45px 0 0;
 }
 
-.phases li {
-  list-style-type: none;
+.project-status .upper {
+  padding-bottom: 8px;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.12);
 }
 
 .phases li p {
@@ -176,4 +181,60 @@ main {
   color: #dfaf64;
 }
 
-.phases {}
+.cards-container {
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-template-rows: 1fr 1fr;
+  padding-top: 20px;
+}
+
+.circle {
+  width: 46px;
+  height: 46px;
+  line-height: 1;
+  background-size: cover;
+}
+
+.circle.one {
+  background-image: url(images/card-circle-01.png);
+}
+
+.circle.two {
+  background-image: url(images/card-circle-02.png);
+}
+
+.circle.three {
+  background-image: url(images/card-circle-03.png);
+}
+
+.circle.four {
+  background-image: url(images/card-circle-04.png);
+}
+
+.circle.five {
+  background-image: url(images/card-circle-05.png);
+}
+
+.circle.six {
+  background-image: url(images/card-circle-06.png);
+}
+
+.circle p {
+  font-size: 11px;
+}
+
+.project-status .cards .data {
+  flex: 1;
+}
+
+.data .left .subtitle {
+  font-size: 12px;
+  color: #9E9E9E;
+}
+
+.records {
+  font-size: 14px
+}
+
+.records span {
+  color: #9e9e9e;
+}
