--- a/style.css
+++ b/style.css
@@ -82,6 +82,10 @@ li {
   gap: 20px;
 }
 
+.gap-18 {
+  gap: 18px;
+}
+
 .gap-6 {
   gap: 6px;
 }
@@ -185,6 +189,10 @@ main {
   grid-template-columns: 1fr 1fr 1fr;
   grid-template-rows: 1fr 1fr;
   padding-top: 20px;
+}
+
+.project-status .cards {
+  padding: 12px 14px;
 }
 
 .circle {
